Migrate to latest Markdown curator (replacing Guice with Dagger).